# heartpod_frontend

./: .dockerignore  .gitignore  APP_FLOW.md  ASR_INVESTIGATION.md  AZURE_ERROR_LOG.md  AZURE_OPENAI_SETUP.md  AZURE_TROUBLESHOOTING.md  BACKEND_PORTABILITY.md  CODEBASE_MAP.md  CONVERSATION_MODE_IMPLEMENTATION.md  CURRENT_STATUS.md  DATA_FLOW_REFERENCE.md  DEPLOY_CONVERSATION_MODE.md  Dockerfile  Dockerfile.emulator  GROQ_SETUP.md  IT_SUPPORT_REQUEST.md  MANUAL_DEPLOYMENT.md  MIGRATION_STEPS.md  NEXT_STEPS.md  PI2_OPENHAB_FIX.md  README.md  REBUILD_INSTRUCTIONS.md  RELEASE_NOTES_v1.0.md  SDK_INDEPENDENT_TESTING.md  SETUP_AND_RUN_GUIDE.md  SIMULATION_GUIDE.md  STATE_MACHINE_GUIDE.md  STATUS.md  SYSTEM_ARCHITECTURE_GUIDE.md  SYSTEM_CHECK.md  TEMI_DIAGNOSTICS.md  TEMI_NAVIGATION_GUIDE.md  TESTING_WITHOUT_ROBOT.md  VOICE_INTEGRATION_STATUS.md  VOICE_TROUBLESHOOTING.md  WAKE_WORD_BUTTON.md  WORK_SUMMARY.md  agent_monitor.py  backup_healthub.sh  (+30 more)
app/: .gitignore  build.gradle.kts
app/libs/: sdk-v1.136.0.aar
app/src/main/cpp/: CMakeLists.txt  placeholder.cpp
backup_data/: cmdline.txt  config.txt  issue.txt  openhabian.conf
backup_data/overlays/: seeed-can-fd-hat-v2.dtbo  sh1106-spi.dtbo  si446x-spi0.dtbo  smi.dtbo
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
healthub-main/: README.md  config.py  requirements.txt
healthub-main/devices/: base_device.py  omron_bp.py  polar_h10.py  pulse_oximeter.py
healthub-main/utility/: bleak_listener_omron_v1.py  (+2 more)
langraph-backend/: .env  .env.example  README.md  agent.py  main.py  requirements.txt
(+68 files in other folders)
